Fix navigation spacing, change link color to secondary-color

--- a/assets/_sass/_footer.scss
+++ b/assets/_sass/_footer.scss
@@ -28,6 +28,7 @@ footer {
     @include desktop {
       position: absolute;
       right: 0;
+      margin-top: -1rem;
     }
     .horizontal-list {
       padding-top: 0;
