--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -111,7 +111,6 @@ nav {
   .navigation {
     display: none;
     list-style-type: none;
-    padding-top: .5rem;
     @include desktop {
       display: block;
     }
