--- a/assets/main.scss
+++ b/assets/main.scss
@@ -73,12 +73,9 @@ h1, h2, h3, h4, h5, h6 {
   color: color(primary-color);
 }
 
-// h1 {
-//   font-size: 60px;
-// }
-
 a {
   text-decoration: none;
+  color: color(secondary-color);
 }
 
 @import
